# narsil-mcp

./: CHANGELOG.md  Cargo.toml  DEPENDENCIES.txt
.github/workflows/: build-binaries.yml  release.yml
narsil-plugin/: README.md
narsil-plugin/.claude-plugin/: plugin.json
narsil-plugin/commands/: explore.md  find-feature.md
narsil-plugin/skills/narsil/: SKILL.md  WORKFLOWS.md
npm/: package.json
src/: git.rs  http_server.rs  incremental.rs  index.rs  lib.rs  lsp.rs  main.rs  mcp.rs  mcp_http.rs  neural.rs  persist.rs  remote.rs  validation.rs
src/ccg/: import.rs
src/config/: filter.rs  loader.rs  schema.rs
src/persistence/: graph.rs  sparql.rs
src/tool_handlers/: mod.rs  repo.rs
tests/: integration_tests.rs  persistence_tests.rs  security_tests.rs
tests/config/: filter_tests.rs  parser_tests.rs  priority_tests.rs
tests/integration/: full_flow_tests.rs  mcp_flow_tests.rs
