[package]
name = "narsil-mcp"
version = "1.7.0"
edition = "2021"
authors = ["postrv"]
description = "A blazingly fast MCP server for code intelligence - enumerates repos, data structures, algorithms, and returns relevant code context"
license = "MIT OR Apache-2.0"
repository = "https://github.com/postrv/narsil-mcp"
readme = "README.md"
keywords = ["mcp", "code-intelligence", "tree-sitter", "lsp", "ai"]
categories = ["development-tools", "command-line-utilities", "parsing"]
exclude = ["frontend/", "docs/", ".github/", "*.md", "!README.md"]

[features]
default = ["native"]
native = ["dep:notify", "dep:tokio", "dep:async-trait", "dep:reqwest", "dep:octocrab", "dep:lsp-types", "dep:lsp-server", "dep:tempfile", "dep:axum", "dep:tower", "dep:tower-http"]
graph = ["dep:oxigraph", "dep:flate2"]  # RDF knowledge graph with SPARQL support
frontend = ["native", "dep:rust-embed", "dep:mime_guess"]  # Embeds visualization frontend in binary
neural = ["usearch", "ndarray"]
neural-onnx = ["neural", "ort", "tokenizers"]
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook", "getrandom/js"]

[dependencies]
# File watching (optional, enabled by default in native)
notify = { version = "6.1", optional = true }

# Neural embeddings (optional)
ort = { version = "2.0.0-rc.10", optional = true, features = ["download-binaries", "fetch-models", "ndarray"] }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
usearch = { version = "2.16", optional = true }
ndarray = { version = "0.16", optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Window"] }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }

# HTTP client for API-based embeddings (native only)
# Using rustls-tls instead of native-tls for musl compatibility
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"], optional = true }

# HTTP server for frontend (native only)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Embedded frontend assets (optional, for visualization)
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
# MCP/JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# Tree-sitter for parsing
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.6"
tree-sitter-verilog = "1.0"
tree-sitter-scala = "0.23"
tree-sitter-lua = "0.2"
tree-sitter-haskell = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-clojure-orchard = "0.2"
tree-sitter-dart-orchard = "0.3"
tree-sitter-julia = "0.23"
tree-sitter-r = "1.2"
tree-sitter-perl = "1.1"
tree-sitter-zig = "1.1"
tree-sitter-erlang = "0.14"
tree-sitter-elm = "5.9"
tree-sitter-fortran = "0.5"
tree-sitter-powershell = "0.25"
tree-sitter-nix = "0.3"
tree-sitter-groovy = "0.1"

# File system and path handling
walkdir = "2.5"
ignore = "0.4"  # Respects .gitignore
glob = "0.3"
# Note: notify is optional and enabled via the "native" feature

# Indexing and search
tantivy = { version = "0.22", default-features = false, features = ["lz4-compression"] }  # Full-text search engine (no mmap for wasm compat)
memmap2 = "0.9"   # Memory-mapped files for speed
bincode = "1.3"   # Binary serialization for index persistence
regex = "1.10"    # Regular expression support

# Configuration and rules
serde-saphyr = "0.0"  # YAML parsing for security rules (panic-free, actively maintained)
toml = "0.8"        # TOML parsing for config

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
directories = "5.0"
sha2 = "0.10"
lazy_static = "1.5"
parking_lot = "0.12"
rayon = "1.10"  # Parallel iteration
dashmap = "6.0"  # Concurrent hashmap
uuid = { version = "1.0", features = ["v4"] }  # For generating unique streaming tokens
chrono = "0.4"  # Date/time handling for SBOM generation
url = "2.5"  # URL parsing and validation

# GitHub API and remote repos (native only)
octocrab = { version = "0.38", optional = true }
tempfile = { version = "3.8", optional = true }
base64 = "0.21"

# LSP integration (native only)
lsp-types = { version = "0.95", optional = true }  # LSP protocol types
lsp-server = { version = "0.7", optional = true }  # LSP server utilities

# RDF knowledge graph (optional, for persistent graph storage)
oxigraph = { version = "0.5", optional = true }

# Gzip compression for CCG layers (required by graph feature)
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"          # Property-based testing
criterion = { version = "0.5", features = ["html_reports"] }  # Benchmarking
test-case = "3.3"         # Parameterized tests
pretty_assertions = "1.4" # Better assertion diffs

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "filtering"
harness = false

[[bench]]
name = "token_usage"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "narsil_mcp"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "narsil-mcp"
path = "src/main.rs"
